art_make( BASENAME_ONLY
	LIB_LIBRARIES
		lardataobj_RawData
		lardataobj_RecoBase
		lardata_RecoObjects
		lardata_ArtDataHelper
		lardata_Utilities
		lardata_DetectorInfoServices_DetectorPropertiesServiceStandard_service
		larevt_Filters
		larevt_CalibrationDBI_IOVData
		larevt_CalibrationDBI_Providers
		${ART_FRAMEWORK_CORE}
		${ART_FRAMEWORK_PRINCIPAL}
		${ART_FRAMEWORK_SERVICES_REGISTRY}
		${ART_FRAMEWORK_SERVICES_BASIC}
		${ART_FRAMEWORK_SERVICES_OPTIONAL}
		${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
		${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
		art_Persistency_Common
		art_Persistency_Provenance
		art_Utilities
		${ART_UTILITIES}
		${FHICLCPP}
		${ROOT_BASIC_LIB_LIST}
		${MF_MESSAGELOGGER}
		${MF_UTILITIES}
		${FHICLCPP}
		${CETLIB}
		${G4_LIB_LIST}
		${Boost_SYSTEM_LIBRARY}
	MODULE_LIBRARIES
		uboone_AnalysisTree_MCTruth
		larsim_MCCheater_BackTracker_service
		PreSelectAlgorithms
		PreSelectDataObjects
		larreco_RecoAlg
		larreco_RecoAlg_Cluster3DAlgs
		larsim_Simulation
		lardataobj_RawData
		lardata_RecoObjects
		lardataobj_RecoBase
		lardataobj_MCBase
		lardataobj_AnalysisBase
		larcore_Geometry
    larcore_Geometry_Geometry_service
		lardata_Utilities
		nusimdata_SimulationBase
		${ART_FRAMEWORK_CORE}
		${ART_FRAMEWORK_PRINCIPAL}
		${ART_FRAMEWORK_SERVICES_REGISTRY}
		${ART_FRAMEWORK_SERVICES_BASIC}
		${ART_FRAMEWORK_SERVICES_OPTIONAL}
		${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
		${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
		art_Persistency_Common
		art_Persistency_Provenance
		art_Utilities
		${MF_MESSAGELOGGER}
		${MF_UTILITIES}
		${FHICLCPP}
		${CETLIB}
		${CLHEP}
		${ROOT_BASIC_LIB_LIST}
		${G4_LIB_LIST}
		${Boost_SYSTEM_LIBRARY}
	)

add_subdirectory(Algorithms)
add_subdirectory(DataObjects)

install_headers()
install_source()
install_fhicl()
